# FFIPlugin

./: .gitignore  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
ios/: reversi.podspec
ios/Classes/: reversi.cpp
lib/: reversi.dart  reversi_bindings_generated.dart
linux/: CMakeLists.txt
macos/: reversi.podspec
src/: CMakeLists.txt  reversi  reversi.cpp  reversi.h
src/reversi.dSYM/Contents/Resources/DWARF/: reversi
src/reversi.dSYM/Contents/Resources/Relocations/aarch64/: reversi.yml
windows/: CMakeLists.txt
